--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -18,11 +18,11 @@
     }
 
     &--2 {
-        font-size: $font-size-6;
+        font-size: $font-size-4;
         line-height: 75px;
         font-weight: $font-weight-light;
         @include small-up {
-            font-size: $font-size-4;
+            font-size: $font-size-5;
         }
 
         @include medium-up {
