--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -11,7 +11,7 @@
         position: relative;
         z-index: 2;
         padding: 14px;
-        width: 100vw;
+        width: 99vw;
 
         & a {
             text-decoration: none;
